--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
+    "expo-image": "~1.13.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-circle-button": "^1.0.9",
+    "react-native-confetti": "^0.1.0",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-mapper": "^0.1.11",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-snap-carousel": "^3.9.1",
+    "rn-swipe-button": "^1.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
