--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-mapper": "^0.1.11",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "rn-swipe-button": "^1.3.8"
   },
   "devDependencies": {
